--- a/html/mixedframes1.html
+++ b/html/mixedframes1.html
@@ -1,11 +1,8 @@
 <html>
-<head></head>
+<head>
+<title>Mixed frame</title></head>
 <frameset cols="25%,75%">
-<frame name="left" src="navigation2.html">
-<frame src="floating2.html">
+<frame name="left" src="nav.html">
+<frame src="float2.html">
 </frameset>
-
-<body>
-<h1>Navigation<\h1>
-</body>
 </html>
